[package]
name = "rdtls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap-sys = "0.1.3"
structopt = "0.3"
libc = "0.2"
anyhow = "1"
log = "0.4"
pktparse = { version = "0.7.1", features = ["serde"] }
tls-parser = "0.11"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
base64 = "0.13"
hashlink = "0.8.4"